Fix deadlock issue while receiving events